gccida/c1/unroll_loop
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:731:6: error: use of undeclared identifier 'fld'
rtx *fld; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:741:4: error: expected ';' after expression
rtx v48; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:741:5: error: use of undeclared identifier 'v48'
rtx v48; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:748:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:748:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:767:4: error: expected ';' after expression
rtx v74; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:767:5: error: use of undeclared identifier 'v74'
rtx v74; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:771:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v78; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:775:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v82; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:778:4: error: expected ';' after expression
rtx v85; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:778:5: error: use of undeclared identifier 'v85'
rtx v85; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:782:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v89; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:785:6: error: use of undeclared identifier 'v92'
rtx *v92; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:790:4: error: expected ';' after expression
rtx v97; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:790:5: error: use of undeclared identifier 'v97'
rtx v97; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:797:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v104; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:799:4: error: expected ';' after expression
rtx v106; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:799:5: error: use of undeclared identifier 'v106'
rtx v106; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/unroll.c:803:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v110; // r14d 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unroll_loop/src/obj/unroll.o] Error 1
